# PytorchExample

./: .gitignore  CMakeLists.txt  README.md  TransferLearning.ipynb  infer.cpp  infer.h  main.cpp
utils/: opencvutils.cpp  opencvutils.h  torchutils.cpp  torchutils.h
